Bugfix/otf jasix 3199 (#172)
* using ucsc naming styles since that is the style the json output follows

* adding a map of chrom names in index

* regenerating jasix index for unit tests

* added unit test for query in both enesmbl and ucsc style for on the fly index generation

* using tuple names

* using TryGetValue

* reorganizing the jasix main file

--- a/Jasix/Properties/launchSettings.json
+++ b/Jasix/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Jasix": {
       "commandName": "Project",
-      "commandLineArgs": " -i test.json.gz -c",
+      "commandLineArgs": " -i clinvar.json.gz -q chr1",
       "workingDirectory": "C:\\Development\\TestDatasets"
     }
   }
