Bugfix/code coverage update (#211)
* Initial pass at removing major issues.

* Added the null space checker.

* Minor SonarQube fix - params ambiguity with string split.

* Increased code coverage in a few of our libraries.

* Added unit tests for IO and compression.

* Added more unit tests - now back at 90%

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\CommandLine\CommandLine.csproj" />
     <ProjectReference Include="..\Compression\Compression.csproj" />
     <ProjectReference Include="..\ErrorHandling\ErrorHandling.csproj" />
+    <ProjectReference Include="..\Intervals\Intervals.csproj" />
     <ProjectReference Include="..\IO\IO.csproj" />
     <ProjectReference Include="..\Jasix\Jasix.csproj" />
     <ProjectReference Include="..\Nirvana\Nirvana.csproj" />
