--- a/SAUtils/Properties/launchSettings.json
+++ b/SAUtils/Properties/launchSettings.json
@@ -57,7 +57,7 @@
     },
     "RR_custom": {
       "commandName": "Project",
-      "commandLineArgs": " custom  --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --out c:\\Development\\SupplementaryDatabase\\test --in Test.tsv ",
+      "commandLineArgs": " custom  --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --out c:\\Development\\SupplementaryDatabase\\temp --in Custom-annotations_short-GRCh37.tsv",
       "workingDirectory": "C:\\Development\\ExternalDataSources\\Custom"
     },
     "RR_globalAllele": {
