--- a/Tabix/Tabix.csproj
+++ b/Tabix/Tabix.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <Import Project="..\VariantAnnotation\CommonAssemblyInfo.props" />
   <ItemGroup>
+    <ProjectReference Include="..\Compression\Compression.csproj" />
     <ProjectReference Include="..\Genome\Genome.csproj" />
   </ItemGroup>
 </Project>
