disabling time stamp check on jasix index (#228)

--- a/Jasix/Properties/launchSettings.json
+++ b/Jasix/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Jasix": {
       "commandName": "Project",
-      "commandLineArgs": " -i clinvar.json.gz -q chr1",
+      "commandLineArgs": " --in trioChr1.json.gz -q chr1:10000-10010",
       "workingDirectory": "C:\\Development\\TestDatasets"
     }
   }
