--- a/Phantom/Phantom.csproj
+++ b/Phantom/Phantom.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1-beta1" />
     <ProjectReference Include="..\Compression\Compression.csproj" />
     <ProjectReference Include="..\OptimizedCore\OptimizedCore.csproj" />
     <ProjectReference Include="..\Genome\Genome.csproj" />
