--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -118,6 +118,11 @@
       "commandName": "Project",
       "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh37\\Ensembl --sd C:\\Development\\SupplementaryDatabase\\47\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --in NA12878-dragen-joint.vcf.gz --out dragenNa12878 --disable-recomposition",
       "workingDirectory": "c:\\Development\\TestDatasets"
+    },
+    "RR_miniIcsl\\": {
+      "commandName": "Project",
+      "commandLineArgs": "--cache C:\\Development\\Cache\\26\\GRCh37\\Ensembl --sd C:\\Development\\SupplementaryDatabase\\47\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --disable-recomposition --in miniIcsl.vcf --out mini",
+      "workingDirectory": "C:\\Development\\ExternalDataSources\\ICSL\\GRCh37"
     }
   }
 }
