Feature/automatic sa jschema generation 3245 (#257)
* Implement generic way to append the string builder in an JsonObject object

* Support data types that represented as string internally

* Initial implementation for auto schema generation for CA

* CustomAnnotationParser refactoring; Support genome assembly in TSV header

* Don't infer type from data or GetJsonString method

* Make ALT/END column optional; Define the types of ref/alt allele keys explicitly

* Skip Unknown values in enum

* Output the custom SA annotations in original order; Use the schema object to handle logic for json string generation

* clean up JsonObject class

* Add unit tests

* Bugfix: use dash for empty ref or alt base

* Generate the action for json string generation to speed up the process

* Create a class for JSON key annotation information; boolean value is always considered as optional

* Throw an exception when the reference allele provided in the custom annation is incorrect

* Only treat numbers in AlleleFrequency category as double values. All other numbers are represented as is in the annotation

--- a/SAUtils/Properties/launchSettings.json
+++ b/SAUtils/Properties/launchSettings.json
@@ -5,11 +5,6 @@
       "commandLineArgs": "createOMIM --gi ..\\gene_info_2016-10-17 --gi ..\\gene_info_2011-08-28 --hgnc ..\\hgnc_complete_set_2016-10-17.txt --mim mim2gene.txt --in genemap2.txt --out test",
       "workingDirectory": "E:\\Nirvana_resources\\ExternalDataSources\\OMIM\\2017-08-15"
     },
-    "MITOMAP": {
-      "commandName": "Project",
-      "commandLineArgs": "mitomapVarDb --in E:\\Nirvana_resources\\Nirvana\\Development\\ExternalDataSources\\MitoMAP\\2018-02-28\\MutationsRNA --in E:\\Nirvana_resources\\Nirvana\\Development\\ExternalDataSources\\MitoMAP\\2018-02-28\\MutationsCodingControl --in E:\\Nirvana_resources\\Nirvana\\Development\\ExternalDataSources\\MitoMAP\\2018-02-28\\PolymorphismsCoding --in E:\\Nirvana_resources\\Nirvana\\Development\\ExternalDataSources\\MitoMAP\\2018-02-28\\PolymorphismsControl  --in E:\\Nirvana_resources\\Nirvana\\Development\\ExternalDataSources\\MitoMAP\\2018-02-28\\InsertionsSimple --in E:\\Nirvana_resources\\Nirvana\\Development\\ExternalDataSources\\MitoMAP\\2018-02-28\\DeletionsSingle --ref E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --out .",
-      "workingDirectory": "E:\\Nirvana_resources\\gen_data\\gen_MitoMap"
-    },
     "RR_omim": {
       "commandName": "Project",
       "commandLineArgs": " omim --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --out c:\\Development\\SupplementaryDatabase\\temp --gm2 genemap2.txt --m2g mim2gene.txt --uga c:\\Development\\Cache\\26\\UGA.tsv.gz",
@@ -64,6 +59,11 @@
       "commandName": "Project",
       "commandLineArgs": " OneKgen --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --out c:\\Development\\SupplementaryDatabase\\test\\GRCh38 --in ALL_1000Genome_GRCh38_snvRes_5_23_2016_remove_conflicting_entries.removeExtraField.vcf.gz",
       "workingDirectory": "c:\\Development\\ExternalDataSources\\1000Gen\\GRCh38"
+    },
+    "SK_JsonSchema": {
+      "commandName": "Project",
+      "commandLineArgs": "Custom --ref E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --in Test.tsv --out .",
+      "workingDirectory": "E:\\Nirvana_resources\\test_runs\\test_CA"
     }
   }
 }
