--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -113,6 +113,11 @@
       "commandName": "Project",
       "commandLineArgs": "--cache C:\\Development\\Cache\\26\\GRCh37\\Ensembl --sd C:\\Development\\SupplementaryDatabase\\47\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --disable-recomposition --in paul_chrM.vcf.gz --out paul_M",
       "workingDirectory": "C:\\Development\\TestDatasets"
+    },
+    "RR_dragen3.2_cnv": {
+      "commandName": "Project",
+      "commandLineArgs": "--cache C:\\Development\\Cache\\26\\GRCh37\\Ensembl --sd C:\\Development\\SupplementaryDatabase\\47\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --disable-recomposition --in NA12878.cnv.vcf --out test",
+      "workingDirectory": "c:\\Development\\TestDatasets"
     }
   }
 }
