--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -118,6 +118,11 @@
       "commandName": "Project",
       "commandLineArgs": "--cache C:\\Development\\Cache\\26\\GRCh37\\Ensembl --sd C:\\Development\\SupplementaryDatabase\\47\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --disable-recomposition --in NA12878.cnv.vcf --out test",
       "workingDirectory": "c:\\Development\\TestDatasets"
+    },
+    "SK Custom SA": {
+      "commandName": "Project",
+      "commandLineArgs": "-i E:\\Nirvana_resources\\test_runs\\custom_SA\\AU144A_BadVariant-pseq-unknown-single-hg19.vcf.gz -c E:\\Nirvana_resources\\Nirvana\\Development\\Cache\\26\\GRCh37\\Ensembl -r E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --sd E:\\Nirvana_resources\\test_runs\\custom_SA\\  -o custom",
+      "workingDirectory": "E:\\Nirvana_resources\\test_runs\\custom_SA\\"
     }
   }
 }
