Feature/enable real annotation 3580 (#284)
* Add leaveOpen option to JsonWriter

* Make WriteAnnotatedPosition method public

* Make variables public accessible

* Update CnvCreator

* Add null handling to AnnotatedPositions

* Package update

* Add VCF MissingValue constant

* fix unit test

--- a/Jasix/Jasix.csproj
+++ b/Jasix/Jasix.csproj
@@ -6,7 +6,7 @@
     <DebugType>Full</DebugType>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1-beta1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <ProjectReference Include="..\CommandLine\CommandLine.csproj" />
     <ProjectReference Include="..\Compression\Compression.csproj" />
     <ProjectReference Include="..\ErrorHandling\ErrorHandling.csproj" />
