--- a/SAUtils/Properties/launchSettings.json
+++ b/SAUtils/Properties/launchSettings.json
@@ -74,6 +74,11 @@
       "commandName": "Project",
       "commandLineArgs": "Topmed --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --in Topmed_grch37.vcf.gz --out c:\\Development\\SupplementaryDatabase\\temp",
       "workingDirectory": "c:\\Development\\ExternalDataSources\\TopMed"
+    },
+    "SK_MitoMap": {
+      "commandName": "Project",
+      "commandLineArgs": " mitomapVarDb --in E:\\Nirvana_resources\\Nirvana\\Development\\ExternalDataSources\\MitoMAP\\2019-02-25\\MutationsRNA --in E:\\Nirvana_resources\\Nirvana\\Development\\ExternalDataSources\\MitoMAP\\2019-02-25\\MutationsCodingControl --in E:\\Nirvana_resources\\Nirvana\\Development\\ExternalDataSources\\MitoMAP\\2019-02-25\\PolymorphismsCoding --in E:\\Nirvana_resources\\Nirvana\\Development\\ExternalDataSources\\MitoMAP\\2019-02-25\\PolymorphismsControl  --in E:\\Nirvana_resources\\Nirvana\\Development\\ExternalDataSources\\MitoMAP\\2019-02-25\\InsertionsSimple --in E:\\Nirvana_resources\\Nirvana\\Development\\ExternalDataSources\\MitoMAP\\2019-02-25\\DeletionsSingle --ref E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --out .",
+      "workingDirectory": "E:\\Nirvana_resources\\gen_data\\gen_MitoMap\\"
     }
   }
 }
