--- a/SAUtils/Properties/launchSettings.json
+++ b/SAUtils/Properties/launchSettings.json
@@ -75,6 +75,11 @@
       "commandLineArgs": "Topmed --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --in Topmed_grch37.vcf.gz --out c:\\Development\\SupplementaryDatabase\\temp",
       "workingDirectory": "c:\\Development\\ExternalDataSources\\TopMed"
     },
+    "RR_onekgSV": {
+      "commandName": "Project",
+      "commandLineArgs": " OneKGenSv --ref c:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --out c:\\Development\\SupplementaryDatabase\\48\\GRCh37 --in allChrPhase3v5a_conflictRemoved.vcf.gz",
+      "workingDirectory": "c:\\Development\\ExternalDataSources\\1000Gen\\GRCh37"
+    },
     "SK_MitoMap": {
       "commandName": "Project",
       "commandLineArgs": " mitomapVarDb --in E:\\Nirvana_resources\\Nirvana\\Development\\ExternalDataSources\\MitoMAP\\2019-02-25\\MutationsRNA --in E:\\Nirvana_resources\\Nirvana\\Development\\ExternalDataSources\\MitoMAP\\2019-02-25\\MutationsCodingControl --in E:\\Nirvana_resources\\Nirvana\\Development\\ExternalDataSources\\MitoMAP\\2019-02-25\\PolymorphismsCoding --in E:\\Nirvana_resources\\Nirvana\\Development\\ExternalDataSources\\MitoMAP\\2019-02-25\\PolymorphismsControl  --in E:\\Nirvana_resources\\Nirvana\\Development\\ExternalDataSources\\MitoMAP\\2019-02-25\\InsertionsSimple --in E:\\Nirvana_resources\\Nirvana\\Development\\ExternalDataSources\\MitoMAP\\2019-02-25\\DeletionsSingle --ref E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --out .",
