Bugfix/prepare release (#298)
* Bugfix/ca error 3580 (#290)

* fixing Nsa writer

* updating unit tests for the nsa writer refactoring

* Merging SA features to release (#292)

* Feature/onekg sv 3619 (#285)

* initial changes in place

* updating unit tests

* refactoring unit test to remove input files

* updating sa version

* resharper fixes

* fixing the output file name

* Feature/gnomad hemizyous 3690 (#288)

* updating parser for gnomad 2.1 vcf

* initial changes in place

* updating unit tests

* refactoring unit test to remove input files

* updating sa version

* resharper fixes

* fixing unit tests

* leaving out unresolved gene symbol (#289)

* Bugfix/make output json consistent with sdd (#291)

* Add leaveOpen option to JsonWriter

* Make WriteAnnotatedPosition method public

* Make variables public accessible

* Update CnvCreator

* Add null handling to AnnotatedPositions

* Package update

* Add VCF MissingValue constant

* Changes made to fix bugs in single variant Lambda

* Update unit test

* NuGet package update

* Update IAnnotationResources interface

* invalidating the phylop buffer (#294)

* invalidating the phylop buffer

* adding better bug fix and unit test

* proper variable naming

* Fixed the missing 1KG allele frequency error (#295)

--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -133,6 +133,11 @@
       "commandName": "Project",
       "commandLineArgs": " -c E:\\Nirvana_resources\\Nirvana\\Development\\Cache\\26\\GRCh38\\Both -r E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat -i E:\\Nirvana_resources\\temp\\dragen-joint.hard-filtered.vcf.gz -o TITIN_OOM",
       "workingDirectory": "E:\\Nirvana_resources\\test_runs\\test_OOM_2019"
+    },
+    "RR_gHapMixTrio": {
+      "commandName": "Project",
+      "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh37\\Both --sd C:\\Development\\SupplementaryDatabase\\48\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --disable-recomposition --in chr9-10.vcf.gz --out chr9-10",
+      "workingDirectory": "c:\\development\\TestDatasets"
     }
   }
 }
