--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -136,13 +136,33 @@
     },
     "RR_gHapMixTrio": {
       "commandName": "Project",
-      "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh37\\Both --sd C:\\Development\\SupplementaryDatabase\\48\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --disable-recomposition --in chr9-10.vcf.gz --out chr9-10",
+      "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh37\\Both --sd C:\\Development\\SupplementaryDatabase\\49\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --disable-recomposition --in chr9-10.vcf.gz --out chr9-10",
       "workingDirectory": "c:\\development\\TestDatasets"
     },
     "SK Nirvana fail": {
       "commandName": "Project",
       "commandLineArgs": "-i E:\\Nirvana_resources\\test_runs\\test_Nirvana_fail\\nirvana-fail.vcf.gz -c E:\\Nirvana_resources\\Nirvana\\Development\\Cache\\26\\GRCh37\\Refseq -r E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat -o fail",
       "workingDirectory": "E:\\Nirvana_resources\\test_runs\\test_Nirvana_fail\\"
+    },
+    "RR_fny": {
+      "commandName": "Project",
+      "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh37\\RefSeq  --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --disable-recomposition --in FNY01_Multisample-gatk-MultiSample-chrX-hg19.vcf.gz --out fny",
+      "workingDirectory": "c:\\development\\TestDatasets"
+    },
+    "RR_variants_past_edits": {
+      "commandName": "Project",
+      "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh37\\RefSeq  --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --disable-recomposition --in Variants_after_indel_edits_SK.vcf --out test",
+      "workingDirectory": "c:\\development\\TestDatasets"
+    },
+    "SK Codon test": {
+      "commandName": "Project",
+      "commandLineArgs": "-c E:\\Nirvana_resources\\Nirvana\\Development\\Cache\\26\\GRCh37\\RefSeq -r E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat -i E:\\Nirvana_resources\\test_runs\\test_RNA_edit\\Variants_after_indel_edits_SK.vcf  -o extract_cache --disable-recomposition",
+      "workingDirectory": "E:\\Nirvana_resources\\test_runs\\test_RNA_edit"
+    },
+    "RR_rnaEdit": {
+      "commandName": "Project",
+      "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh38\\RefSeq --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --in Dragen_v3.2-Dragen-Pedigree-RnaEdits-hg38-RefSeq-VEP91.vcf.gz --out rnaEdit",
+      "workingDirectory": "c:\\development\\TestDatasets"
     }
   }
 }
