Master to develop (#322)
* Restored develop (#312)

* Bugfix/dev merge candidate (#316)

* Restored develop

* Feature/standardize error message 3777 (#309)

* Add ErrorCategory enum

* Refactor ExceptionUtilities class

* Update NuGet packages

* reorder ErrorCategory

* Remove unnecessary error category

* Fix unit tests

* Resolve SonarQube issues

* Update NuGet packages

* Update the message for VCF genome assembly error

* Adding cache conversion script (#314)

* Remove redundent type and properties json schema keys (#311)

* Fixed the issue (#315)

* Fixed the issue

* Use empty array instead of null

* retry when uploading is failed (#317)

* Bugfix/use relative url 3779 (#319)

* retry when uploading is failed

* using relative s3 url

* env variable has required delimiter

--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -163,6 +163,11 @@
       "commandName": "Project",
       "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh38\\RefSeq --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --in Dragen_v3.2-Dragen-Pedigree-RnaEdits-hg38-RefSeq-VEP91.vcf.gz --out rnaEdit",
       "workingDirectory": "c:\\development\\TestDatasets"
+    },
+    "SK Nirvana fail": {
+      "commandName": "Project",
+      "commandLineArgs": "-i E:\\Nirvana_resources\\test_runs\\test_Nirvana_fail\\nirvana-fail.vcf.gz -c E:\\Nirvana_resources\\Nirvana\\Development\\Cache\\26\\GRCh37\\Refseq -r E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat -o fail",
+      "workingDirectory": "E:\\Nirvana_resources\\test_runs\\test_Nirvana_fail\\"
     }
   }
 }
