Feature/left align 3270 (#325)
* adding varint aligner as a util

* working on gnomad reader and unit tests

* added unit tests for shifting entries

* fixed broken unit tests

* updated dbsnp reader and unit tests

* bug fixing the left aligner

* adding varaint aligner to onekgen. updating unit tests

* updating refminor provider reader

* update cosmic reader

* updated Topmed reader and ancestral allele reader

* adding new files, fixing name typo, removing unused functions

* vcf shifting...updated main libraries. need to fix unit tests

* fixing tests

* updating unit tests

* found bugs

* fixing bugs so that ref sequence is loaded before positions for prelaoding are loaded

* using sa 50

* minor changes

* fixing typo

* updating launching

* preloading ref sequence

* launching

* fixing crash issues

* Fixed the overlap issues with both regulatory regions and transcripts.

* Properly handling the null returns from transcript cache.

* removing commented code

* sonar wining

* left shift bug near the chrom start

* removing commented code

* allowing bgz or gz as extensions for gnomad

* reducing cognitive complexity

--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -81,7 +81,7 @@
     },
     "RR_refMinor": {
       "commandName": "Project",
-      "commandLineArgs": "--cache C:\\Development\\Cache\\26\\GRCh37\\Ensembl --sd C:\\Development\\SupplementaryDatabase\\47\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --disable-recomposition --in NA12878_HSX_PcrFree-Strelka-Germline-RefMinor-GRCh37.vcf.gz --out C:\\Development\\TestDatasets\\refMinor",
+      "commandLineArgs": "--cache C:\\Development\\Cache\\26\\GRCh37\\Both --sd C:\\Development\\SupplementaryDatabase\\50\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --disable-recomposition --in NA12878_HSX_PcrFree-Strelka-Germline-RefMinor-GRCh37.vcf.gz --out refMinor",
       "workingDirectory": "C:\\Development\\TestDatasets"
     },
     "RR_dogBeach": {
@@ -136,7 +136,7 @@
     },
     "RR_gHapMixTrio": {
       "commandName": "Project",
-      "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh37\\Both --sd C:\\Development\\SupplementaryDatabase\\49\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --disable-recomposition --in chr9-10.vcf.gz --out chr9-10",
+      "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh37\\Both --sd C:\\Development\\SupplementaryDatabase\\50\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --disable-recomposition --in chr9-10.vcf.gz --out chr9-10.50",
       "workingDirectory": "c:\\development\\TestDatasets"
     },
     "SK Nirvana fail": {
@@ -144,9 +144,9 @@
       "commandLineArgs": "-i E:\\Nirvana_resources\\test_runs\\test_Nirvana_fail\\nirvana-fail.vcf.gz -c E:\\Nirvana_resources\\Nirvana\\Development\\Cache\\26\\GRCh37\\Refseq -r E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat -o fail",
       "workingDirectory": "E:\\Nirvana_resources\\test_runs\\test_Nirvana_fail\\"
     },
-    "RR_fny": {
+    "RR_left_shift": {
       "commandName": "Project",
-      "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh37\\RefSeq  --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --disable-recomposition --in FNY01_Multisample-gatk-MultiSample-chrX-hg19.vcf.gz --out fny",
+      "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh37\\RefSeq --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --disable-recomposition --sd c:\\development\\SupplementaryDatabase\\50\\GRCh37 --in  NA12878_HSX_PcrFree-Strelka-Germline-MT-GRCh37.vcf.gz --out mtLeftShift",
       "workingDirectory": "c:\\development\\TestDatasets"
     },
     "RR_variants_past_edits": {
@@ -162,6 +162,11 @@
     "RR_rnaEdit": {
       "commandName": "Project",
       "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh38\\RefSeq --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --in Dragen_v3.2-Dragen-Pedigree-RnaEdits-hg38-RefSeq-VEP91.vcf.gz --out rnaEdit",
+      "workingDirectory": "c:\\development\\TestDatasets"
+    },
+    "RR_dragen3.2_SV": {
+      "commandName": "Project",
+      "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh37\\Both --sd C:\\Development\\SupplementaryDatabase\\50\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --disable-recomposition --in Dragen_v3.2-DragenSV-Germline-chr1-GRCh37.vcf.gz --out svLeftShift",
       "workingDirectory": "c:\\development\\TestDatasets"
     },
     "RNAEdit fail test": {
